[package]
name = "coldsnap"
version = "0.6.0"
description = "A library and command-line interface for uploading and downloading Amazon EBS snapshots"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/awslabs/coldsnap"
keywords = ["AWS", "Amazon", "EBS", "snapshot"]

[features]
default = ["aws-sdk-rust-native-tls"]
aws-sdk-rust-native-tls = ["aws-config/native-tls", "aws-sdk-ebs/native-tls", "aws-sdk-ec2/native-tls"]
aws-sdk-rust-rustls = ["aws-config/rustls", "aws-sdk-ebs/rustls", "aws-sdk-ec2/rustls"]
filesystem = ["dep:stretto", "dep:gpt", "dep:color-eyre", "dep:positioned-io2", "dep:ext4-rs-nom"]

[dependencies]
argh = "0.1"
async-trait = "0.1"
aws-config = "0.55"
aws-sdk-ebs = "0.28"
aws-sdk-ec2 = "0.28"
aws-smithy-http = "0.55"
aws-types = "0.55"
base64 = "0.21"
bytes = "1"
color-eyre = { version = "0.6.2", optional = true }
env_logger = "0.10"
ext4-rs-nom = { path = "../../adammw/ext4-rs-nom", optional = true }
futures = "0.3"
gpt = { version = "3.0.0", optional = true }
indicatif = "0.17"
log = "0.4"
nix = { version = "0.27", default-features = false, features = ["ioctl"] }
positioned-io2 = { version = "0.3.4", optional = true }
sha2 = "0.10"
snafu = "0.7"
stretto = { version = "0.7", optional = true, features = ["async"] }
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "rt-multi-thread"] }
